lbdb (0.32) unstable; urgency=low

  * Change sort(1) syntax to cope with new versions of coreutils 
    (Closes: #368917).
  * New version of mutt_ldap_query by Marc de Courville
    <marc@courville.org> and other contributors.

 --

lbdb (0.31.1) unstable; urgency=low

  * Since evolution 2.2.3-2 (2005-08-01) there exists a symlink
    /usr/bin/evolution-addressbook-export. This package is now in testing
    (etch), so m_evolution is changed to access this program via the
    symlink to avoid trouble with various places of e-a-e.
  * It seems, that evolution-addressbook-export now also has EMAIL entries
    without subtype "EMAIL;TYPE=INTERNET:" vs. "EMAIL:" in it. m_evolution
    now supports both variants (Closes: #347971).
  * Remove backslash from comment in m_evolution.

 -- Roland Rosenfeld <roland@debian.org>  Sun, 15 Jan 2006 15:26:49 +0100

lbdb (0.31) unstable; urgency=low

  * m_pine: Double-quote parens. Thanks to Stefan Mätje for reporting this
    bug and sending a patch.
  * Apply patch by Brendan Cully to follow the Apple build system changes
    used to build ABQuery module.
  * Add m_vcf module for querying vcard files provided by Brendan Cully.
  * Add authentication (bind_dn, bind_password) to mutt_ldap_query. Based
    on an idea of Jan-Benedict Glaw (Closes: #324655, #286163).
  * Update FSF address in nearly all files.
  * Upgrade to standards-version 3.6.2 (no changes).

 -- Roland Rosenfeld <roland@debian.org>  Sat, 29 Oct 2005 16:49:58 +0200

lbdb (0.30) unstable; urgency=low

  * Get rid of strict aliasing warnings in gcc.  Thanks to Ludwig Nussel
    <ludwig.nussel@suse.de> for providing a patch.
  * Add line breaks to POD part of mutt_ldap_query.pl to make man page
    more readable.
  * Replace "grep" with "grep -a" to avoid error messages on non-ascii
    output (Closes: #284119).
  * Search for evolution-addressbook-export in /usr/lib/evolution/2.0,
    where it is located in sarge and newer (Closes: #286795).